--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,23 +1,33 @@
-
 body {
-    background: #987866;
-    height    : 100vh;
-    padding   : 0;
-    margin    : 0;
+    background     : #987866;
+    height         : 100vh;
+    padding        : 0;
+    margin         : 0;
     scroll-behavior: smooth;
-    #totopicon{
+
+    #totopicon {
         position: fixed;
-        bottom: 50px;
-        right: 50px;
-        color: #293372;
+        bottom  : 50px;
+        right   : 50px;
+        color   : #293372;
     }
+
+    #footer {
+        border-top: 1px solid #000;
+        margin-top: 40px;
+        padding-top: 40px;
+        font-weight: bold;
+        text-align: center;
+    }
+
     .wrapper {
-        width           : 900px;
-        box-shadow      : 0px 2px 13px 0px rgba(0, 0, 0, 0.75);
-        background-color: white;
-        margin          : 40px auto;
-        border-radius   : 5px;
-        padding         : 40px;
+        width                  : 900px;
+        box-shadow             : 0px 2px 13px 0px rgba(0, 0, 0, 0.75);
+        background-color       : white;
+        margin                 : 40px auto;
+        border-top-left-radius : 5px;
+        border-top-right-radius: 5px;
+        padding                : 40px;
 
         div#menu-wrapper {
             ul.menu {
@@ -33,7 +43,7 @@ body {
 
                     a {
                         text-decoration: none;
-                        color: #293372;
+                        color          : #293372;
                     }
                 }
             }
@@ -81,35 +91,38 @@ body {
     }
 }
 
-@media only screen and (max-width: 1280px){
-    .wrapper{
+@media only screen and (max-width: 1280px) {
+    .wrapper {
         width: 80% !important;
     }
 }
 
-@media only screen and (max-width: 900px){
-    div#menu-wrapper{
+@media only screen and (max-width: 900px) {
+    div#menu-wrapper {
         display: none !important;
     }
 }
 
-@media only screen and (max-width: 600px){
-    div#menu-wrapper{
+@media only screen and (max-width: 600px) {
+    div#menu-wrapper {
         display: none !important;
     }
-    body{
+
+    body {
         background-color: white !important;
     }
-    .wrapper{
+
+    .wrapper {
         margin: 0 auto !important;
     }
 }
 
-@media only screen and (max-width: 400px){
-    html{
+@media only screen and (max-width: 400px) {
+    html {
         overflow-x: hidden;
     }
-    div#team img{
+
+    div#team img {
         width: 100% !important;
     }
 }
