--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,12 +9,19 @@ body {
     bottom: 50px;
     right: 50px;
     color: #293372; }
+  body #footer {
+    border-top: 1px solid #000;
+    margin-top: 40px;
+    padding-top: 40px;
+    font-weight: bold;
+    text-align: center; }
   body .wrapper {
     width: 900px;
     box-shadow: 0px 2px 13px 0px rgba(0, 0, 0, 0.75);
     background-color: white;
     margin: 40px auto;
-    border-radius: 5px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
     padding: 40px; }
     body .wrapper div#menu-wrapper ul.menu {
       list-style: none;
